Update Finding Diagnoses Ages.ipynb

--- a/Finding Diagnoses Ages.ipynb
+++ b/Finding Diagnoses Ages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "2aa763c7",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "183dc721",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "60afbfd5",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "[46520 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "824ffdb8",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "[58976 rows x 19 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "86153b94",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
        "[651047 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "cf3af161",
    "metadata": {},
    "outputs": [
@@ -915,7 +915,7 @@
        "[240095 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "9a6fe22b",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1130,7 @@
        "[27854055 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "7836df2e",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "a44741d0",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3ecb13c2",
    "metadata": {},
    "outputs": [
@@ -1221,6 +1221,94 @@
     "#looks like there are some negative ages?\n",
     "ages_at_death = ages_at_death[ages_at_death >= 0]\n",
     "print(ages_at_death.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bfe0dabe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    5032.000000\n",
+      "mean       42.920707\n",
+      "std        91.991281\n",
+      "min      -285.000000\n",
+      "25%        57.000000\n",
+      "50%        68.000000\n",
+      "75%        78.000000\n",
+      "max        89.000000\n",
+      "dtype: float64\n",
+      "361\n",
+      "count    4671.000000\n",
+      "mean       68.264183\n",
+      "std        12.715971\n",
+      "min        18.000000\n",
+      "25%        59.000000\n",
+      "50%        70.000000\n",
+      "75%        79.000000\n",
+      "max        89.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#convert columns to datetime format\n",
+    "#in admissions, DIAGNOSES column has MYOCARDIAL INFARCTION\n",
+    "admissions['ADMITTIME'] = pd.to_datetime(admissions['ADMITTIME'])\n",
+    "patients['DOB'] = pd.to_datetime(patients['DOB'])\n",
+    "#For each patient with an infarction (ICD-9 code 410), find age at first diagnosed infarction\n",
+    "admissions_infarction = admissions[admissions['SUBJECT_ID'].isin(patient_ids)]\n",
+    "admissions_infarction = admissions_infarction.sort_values(by=['SUBJECT_ID', 'ADMITTIME'])\n",
+    "first_admissions = admissions_infarction.drop_duplicates(subset=['SUBJECT_ID'], keep='first')\n",
+    "\n",
+    "\n",
+    "diagnoses_date = pd.to_datetime(patients.set_index('SUBJECT_ID').loc[first_admissions['SUBJECT_ID'], 'DOB'])\n",
+    "\n",
+    "ages_at_first_infarction = (first_admissions['ADMITTIME'].values - diagnoses_date.values) / np.timedelta64(1, 'D') // 365.25\n",
+    "\n",
+    "ages_at_first_infarction = pd.Series(ages_at_first_infarction)\n",
+    "print(ages_at_first_infarction.describe())\n",
+    "\n",
+    "negative_ages = ages_at_first_infarction[ages_at_first_infarction < 0]\n",
+    "print(len(negative_ages))\n",
+    "\n",
+    "ages_at_first_infarction_positive = ages_at_first_infarction[ages_at_first_infarction >= 0]\n",
+    "print(ages_at_first_infarction_positive.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f7ca03c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    58976.000000\n",
+      "mean        38.070198\n",
+      "std         74.208556\n",
+      "min       -285.000000\n",
+      "25%         36.000000\n",
+      "50%         59.000000\n",
+      "75%         73.000000\n",
+      "max         89.000000\n",
+      "Name: AGE_AT_ADMISSION, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "admissions_patients = admissions.merge(patients[['SUBJECT_ID', 'DOB']], on='SUBJECT_ID', how='left')\n",
+    "admissions_patients['ADMITTIME'] = pd.to_datetime(admissions_patients['ADMITTIME'])\n",
+    "admissions_patients['DOB'] = pd.to_datetime(admissions_patients['DOB'])\n",
+    "\n",
+    "admissions_patients['AGE_AT_ADMISSION'] = (admissions_patients['ADMITTIME'].values - admissions_patients['DOB'].values) / np.timedelta64(1, 'D') // 365.25\n",
+    "print(admissions_patients['AGE_AT_ADMISSION'].describe())"
    ]
   }
  ],
