Update Finding Diagnoses Ages.ipynb

--- a/Finding Diagnoses Ages.ipynb
+++ b/Finding Diagnoses Ages.ipynb
@@ -1370,13 +1370,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "36ab4863",
+   "cell_type": "markdown",
+   "id": "0476f816",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# already have everyone with myocardial infarction in people_with_code\n"
+    "Next\n",
+    "Age at diagnoses of patients with MI (410) - this is our cohort\n",
+    "\n",
+    "Split further into people that dieed.\n",
+    "\n",
+    "Find time between age of first diagnoses and their death - this is the one I still have left to do."
    ]
   }
  ],
