Update Finding Diagnoses Ages.ipynb

--- a/Finding Diagnoses Ages.ipynb
+++ b/Finding Diagnoses Ages.ipynb
@@ -15,11 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "183dc721",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#data is derived from MIMIC-3\n",
+    "\n",
     "admissions = pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\ADMISSIONS.csv\")\n",
     "diagnoses = pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\DIAGNOSES_ICD.csv\")\n",
     "procedures = pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\PROCEDURES_ICD.csv\")\n",
