Update Finding Diagnoses Ages.ipynb

--- a/Finding Diagnoses Ages.ipynb
+++ b/Finding Diagnoses Ages.ipynb
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3ecb13c2",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1216,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Problematic Patient IDs with negative ages at death: []\n",
       "count    928.000000\n",
       "mean      99.831619\n",
       "std       73.399626\n",
@@ -1244,6 +1243,7 @@
     "ages_at_death = [(death_dates[i] - birth_dates[i]).days / 365.25 if (death_dates[i] is not None and birth_dates[i] is not None) else None for i in range(len(birth_dates))]\n",
     "ages_at_death = pd.Series(ages_at_death)\n",
     "\n",
+    "\"\"\"\n",
     "#print(ages_at_death.describe())\n",
     "#print(ages_at_death)\n",
     "\n",
@@ -1255,26 +1255,32 @@
     "\n",
     "\n",
     "ages_at_death = ages_at_death[ages_at_death >= 0]\n",
+    "\"\"\"\n",
+    "\n",
     "print(ages_at_death.describe())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "a2b5ad8c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [SUBJECT_ID, DOB, DOD]\n",
-      "Index: []\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n#now pull the birth date and death date from patients for each person with problematic patient ID\\nproblematic_patients = patients[patients[\\'SUBJECT_ID\\'].isin(problematic_patient_ids)]\\nprint(problematic_patients[[\\'SUBJECT_ID\\', \\'DOB\\', \\'DOD\\']])\\n\\n#those don\\'t look negative\\n#recalculate ages at death for those problematic patients\\nfor pid in problematic_patient_ids:\\n    dob = pd.to_datetime(problematic_patients[problematic_patients[\\'SUBJECT_ID\\'] == pid][\\'DOB\\'].values[0])\\n    dob = dob.to_datetime64()\\n    dod = pd.to_datetime(problematic_patients[problematic_patients[\\'SUBJECT_ID\\'] == pid][\\'DOD\\'].values[0])\\n    dod = dod.to_datetime64()\\n    age = (dod - dob) / np.timedelta64(1, \\'D\\') // 365.25\\n    print(f\"Patient ID: {pid}, DOB: {dob}, DOD: {dod}, Calculated Age at Death: {age}\")\\n\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#ignore - this was part of troubleshooting\n",
+    "\n",
+    "\"\"\"\n",
     "#now pull the birth date and death date from patients for each person with problematic patient ID\n",
     "problematic_patients = patients[patients['SUBJECT_ID'].isin(problematic_patient_ids)]\n",
     "print(problematic_patients[['SUBJECT_ID', 'DOB', 'DOD']])\n",
@@ -1287,26 +1293,17 @@
     "    dod = pd.to_datetime(problematic_patients[problematic_patients['SUBJECT_ID'] == pid]['DOD'].values[0])\n",
     "    dod = dod.to_datetime64()\n",
     "    age = (dod - dob) / np.timedelta64(1, 'D') // 365.25\n",
-    "    print(f\"Patient ID: {pid}, DOB: {dob}, DOD: {dod}, Calculated Age at Death: {age}\")"
+    "    print(f\"Patient ID: {pid}, DOB: {dob}, DOD: {dod}, Calculated Age at Death: {age}\")\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "57ffdf70",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Age calculation fixed!\n",
-      "✓ No more negative ages (previously had 0 problematic records)\n",
-      "\n",
-      "Data quality note: Check source PATIENTS.csv for DOD dates > year 2100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#ROOT CAUSE ANALYSIS OF NEGATIVE AGES ISSUE\n",
     "#===========================================================\n",
@@ -1330,14 +1327,14 @@
     "# NOTE: Your data still has quality issues (max age ~300 years) that should be \n",
     "#       investigated in the source database.\n",
     "\n",
-    "print(\"✓ Age calculation fixed!\")\n",
-    "print(f\"✓ No more negative ages (previously had {len(problematic_patient_ids)} problematic records)\")\n",
-    "print(\"\\nData quality note: Check source PATIENTS.csv for DOD dates > year 2100\")\n"
+    "#print(\"✓ Age calculation fixed!\")\n",
+    "#print(f\"✓ No more negative ages (previously had {len(problematic_patient_ids)} problematic records)\")\n",
+    "#print(\"\\nData quality note: Check source PATIENTS.csv for DOD dates > year 2100\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "bfe0dabe",
    "metadata": {},
    "outputs": [
@@ -1389,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "a1bc928d",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "19456e5c",
    "metadata": {},
    "outputs": [
@@ -1422,7 +1419,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_55720\\416425474.py:1: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_14456\\416425474.py:1: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  plt.boxplot([ages_at_death, ages_at_first_infarction_positive], labels=['Age at Death', 'Age at First Infarction'])\n"
      ]
     },
@@ -1446,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "8f7ca03c",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1453,7 @@
        "\"\\nadmissions_patients = admissions.merge(patients[['SUBJECT_ID', 'DOB']], on='SUBJECT_ID', how='left')\\nadmissions_patients['ADMITTIME'] = pd.to_datetime(admissions_patients['ADMITTIME'])\\nadmissions_patients['DOB'] = pd.to_datetime(admissions_patients['DOB'])\\n\\nadmissions_patients['AGE_AT_ADMISSION'] = (admissions_patients['ADMITTIME'].values - admissions_patients['DOB'].values) / np.timedelta64(1, 'D') // 365.25\\nprint(admissions_patients['AGE_AT_ADMISSION'].describe())\\n\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "3b6f8372",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "6951ea81",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "2cbee0f7",
    "metadata": {},
    "outputs": [
