--- a/Daniel_Assignment1_5860.ipynb
+++ b/Daniel_Assignment1_5860.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "49e28864-5a08-4133-b2bb-e11baf33fe55",
    "metadata": {},
    "outputs": [],
@@ -16,21 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "3a54c7b7-e7b8-4912-8f36-7aee42203429",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ADMISSIONS = pd.read_csv(\"./ADMISSIONS.csv\")\n",
-    "DIAGNOSES_ICD = pd.read_csv(\"./DIAGNOSES_ICD.csv\")\n",
-    "PATIENTS = pd.read_csv(\"./PATIENTS.csv\")\n",
-    "PROCEDURES_ICD = pd.read_csv(\"./PROCEDURES_ICD.csv\")\n",
-    "LAB_EVENTS = pd.read_csv(\"./LABEVENTS.csv\")"
+    "ADMISSIONS = pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\ADMISSIONS.csv\") #pd.read_csv(\"./ADMISSIONS.csv\")\n",
+    "DIAGNOSES_ICD = pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\DIAGNOSES_ICD.csv\") #pd.read_csv(\"./DIAGNOSES_ICD.csv\")\n",
+    "PATIENTS =  pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\PATIENTS.csv\") #pd.read_csv(\"./PATIENTS.csv\")\n",
+    "PROCEDURES_ICD = pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\PROCEDURES_ICD.csv\")  #pd.read_csv(\"./PROCEDURES_ICD.csv\")\n",
+    "LAB_EVENTS = pd.read_csv(r\"C:\\Users\\kappl\\OneDrive\\Documents\\BIOE5860 Precision Medicine\\LABEVENTS.csv\") #pd.read_csv(\"./LABEVENTS.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "86b509e0-847f-4c4d-91fd-fcaceb47c4b2",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "ab549ac2-36c3-4cf1-9ada-b18e6a40aabe",
    "metadata": {},
    "outputs": [],
@@ -74,6 +74,7 @@
     "PATIENT_PROCEDURES = PROCEDURES_ICD[PROCEDURES_ICD['SUBJECT_ID'].isin(AD_SUBJECT_ID)]\n",
     "\n",
     "#Return a new dataframe with all procedure codes for each admission compressed into a single row,col val as a compressed list\n",
+    "PATIENT_PROCEDURES = (\n",
     "    PATIENT_PROCEDURES\n",
     "    .sort_values(['HADM_ID','SEQ_NUM'])\n",
     "    .groupby(['SUBJECT_ID','HADM_ID'])['ICD9_CODE']\n",
@@ -87,10 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "cc908d85-18d6-46ad-8add-3af321af5748",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_31112\\939080305.py:21: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  .apply(lambda df: list(zip(df.CHARTTIME, df.ITEMID, df.VALUENUM, df.FLAG)))\n"
+     ]
+    }
+   ],
    "source": [
     "#Identify all patient labs for patients who were diagnosed with AD at any point\n",
     "PATIENT_LAB_EVENTS = LAB_EVENTS[LAB_EVENTS['SUBJECT_ID'].isin(AD_SUBJECT_ID)]\n",
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "5c8dbdcd-724d-48e1-b21c-91af83035604",
    "metadata": {},
    "outputs": [],
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "178d7ca7-3dd7-40e2-bc39-e99694852d61",
    "metadata": {},
    "outputs": [],
@@ -153,10 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "a4e2649a-2f6b-4e9b-b318-44aa0e40a221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_31112\\1949584182.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  AD_ADMISSIONS['ADMITTIME'] = pd.to_datetime(AD_ADMISSIONS[\"ADMITTIME\"], errors=\"coerce\")\n"
+     ]
+    }
+   ],
    "source": [
     "#Identify the admissions where AD was one of the diagnoses given to the patients, excluding admissions where AD was not diagnosed\n",
     "AD_ADMISSIONS = ADMISSIONS_MERGED[ADMISSIONS_MERGED['HADM_ID'].isin(AD_HADM_ID)]\n",
@@ -176,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "id": "5a589340-1955-448d-88d9-b4f885d901c6",
    "metadata": {},
    "outputs": [],
@@ -190,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "c5bec41f-7244-40f1-80e2-62058ff9ead8",
    "metadata": {},
    "outputs": [
@@ -616,7 +639,7 @@
        "[1644 rows x 22 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -642,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
