--- a/Daniel_Assignment1_5860.ipynb
+++ b/Daniel_Assignment1_5860.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "49e28864-5a08-4133-b2bb-e11baf33fe55",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "3a54c7b7-e7b8-4912-8f36-7aee42203429",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "86b509e0-847f-4c4d-91fd-fcaceb47c4b2",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "ab549ac2-36c3-4cf1-9ada-b18e6a40aabe",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "cc908d85-18d6-46ad-8add-3af321af5748",
    "metadata": {},
    "outputs": [
@@ -133,9 +133,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_45384\\920204858.py:27: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_30772\\920204858.py:27: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda df: list(zip(df.CHARTTIME, df.ITEMID, df.VALUENUM, df.FLAG)))\n",
-      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_45384\\920204858.py:36: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_30772\\920204858.py:36: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda df: list(zip(df.CHARTTIME, df.ITEMID, df.VALUENUM, df.FLAG)))\n"
      ]
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "5c8dbdcd-724d-48e1-b21c-91af83035604",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "178d7ca7-3dd7-40e2-bc39-e99694852d61",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "a4e2649a-2f6b-4e9b-b318-44aa0e40a221",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_45384\\782635670.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\kappl\\AppData\\Local\\Temp\\ipykernel_30772\\782635670.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "5a589340-1955-448d-88d9-b4f885d901c6",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "c5bec41f-7244-40f1-80e2-62058ff9ead8",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "[1644 rows x 21 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "2d37c7d1",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
        "[58976 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "18ddca1f",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "dfaf277e",
    "metadata": {},
    "outputs": [
@@ -1210,6 +1210,27 @@
    "source": [
     "print(CONTROL_ADMISSIONS_MERGED.columns)\n",
     "print(CONTROL_ADMISSIONS_MERGED.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "46d1bfb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique patients diagnosed with AD:  1486\n",
+      "Number of unique control patients:  46520\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print number of unique patients in each group after filtering\n",
+    "print(\"Number of unique patients diagnosed with AD: \", PATIENT_ADMISSIONS_MERGED['SUBJECT_ID'].nunique())\n",
+    "print(\"Number of unique control patients: \", CONTROL_ADMISSIONS_MERGED['SUBJECT_ID'].nunique())"
    ]
   }
  ],
