--- a/Assignment_1_Refactored_Daniel.ipynb
+++ b/Assignment_1_Refactored_Daniel.ipynb
@@ -2,31 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "8023fbe4-c3ef-4603-9a28-53b4c79cdb68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
-      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
-      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
-      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
-      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='str')\n",
-      "(378, 20)\n",
-      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
-      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
-      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
-      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
-      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='str')\n",
-      "(58462, 20)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#This code compresses PROCEDURES_ICD9, and DIAGNOSES_ICD9 into single entries per admission (sorted by SEQ_NUM)\n",
     "#and merges this data with the ADMISSIONS dataframe, providing two separate dataframes with this merged structure.\n",
@@ -45,10 +24,10 @@
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "ADMISSIONS = pd.read_csv(\"./ADMISSIONS.csv\")\n",
-    "DIAGNOSES_ICD = pd.read_csv(\"./DIAGNOSES_ICD.csv\")\n",
-    "PATIENTS = pd.read_csv(\"./PATIENTS.csv\")\n",
-    "PROCEDURES_ICD = pd.read_csv(\"./PROCEDURES_ICD.csv\")\n",
+    "ADMISSIONS = pd.read_csv(r\"C:\\BIOE5860_Data\\ADMISSIONS.csv\")\n",
+    "DIAGNOSES_ICD = pd.read_csv(r\"C:\\BIOE5860_Data\\DIAGNOSES_ICD.csv\")\n",
+    "PATIENTS = pd.read_csv(r\"C:\\BIOE5860_Data\\PATIENTS.csv\")\n",
+    "PROCEDURES_ICD = pd.read_csv(r\"C:\\BIOE5860_Data\\PROCEDURES_ICD.csv\")\n",
     "\n",
     "#Input ICD9 code that you want to look at here:\n",
     "my_icd9_code = [\"44100\", \"44101\", \"44102\", \"44103\"] #441 is arotic dissection. Change to 421 for bacterial endocarditis\n",
@@ -191,10 +170,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "80d43a2a-8613-4a41-a37a-64dd3a6d285e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
+      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
+      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
+      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
+      "      dtype='str')\n",
+      "(378, 20)\n",
+      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
+      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
+      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
+      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
+      "      dtype='str')\n",
+      "(58462, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "#Thomas's logic retained below\n",
     "\n",
@@ -207,25 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n#Return a condensed lab events DF with CHARTTIME, ITEMID, VALUENUM, and FLAG for analytics and ML later.\\nPATIENT_LAB_EVENTS = (\\n    PATIENT_LAB_EVENTS\\n    .sort_values(['HADM_ID','CHARTTIME'])\\n    .groupby('HADM_ID')\\n    .apply(lambda df: list(zip(df.CHARTTIME, df.ITEMID, df.VALUENUM, df.FLAG)))\\n    .reset_index(name='Lab Events')\\n)\\n\\n#Return a condensed lab events DF for control patients as well\\nCONTROL_LAB_EVENTS = (\\n    CONTROL_LAB_EVENTS\\n    .sort_values(['HADM_ID','CHARTTIME'])\\n    .groupby('HADM_ID')\\n    .apply(lambda df: list(zip(df.CHARTTIME, df.ITEMID, df.VALUENUM, df.FLAG)))\\n    .reset_index(name='Lab Events')\\n)\\n\\n\""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chunksize = 50000\n",
-    "LAB_EVENTS = pd.read_csv('./LABEVENTS.csv',chunksize=chunksize)\n",
-    "LAB_IDS = pd.read_csv(\"Lab_Item_Codes.txt\", sep=\"\\t\")\n",
+    "LAB_EVENTS = pd.read_csv(r\"C:\\BIOE5860_Data\\LABEVENTS.csv\",chunksize=chunksize)\n",
+    "LAB_IDS = pd.read_csv(r\"C:\\BIOE5860_Data\\Lab_Item_Codes.txt\", sep=\"\\t\")\n",
     "\n",
     "PATIENT_LAB_EVENTS2 = []\n",
     "CONTROL_LAB_EVENTS2 = []\n",
@@ -286,20 +275,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "373a8875-2261-4d82-84ac-923810f87831",
+   "execution_count": 20,
+   "id": "7167c12e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def apply_event_index_filter(PATIENT_ADMISSIONS_MERGED, CONTROL_ADMISSIONS_MERGED, AD_HADM_ID):\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.copy()\n",
+    "    CONTROL_ADMISSIONS_MERGED = CONTROL_ADMISSIONS_MERGED.copy()\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED[\"ADMISSION_INDEX\"] = PATIENT_ADMISSIONS_MERGED.index\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"] = pd.to_datetime(\n",
+    "        PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"], errors=\"coerce\"\n",
+    "    )\n",
+    "\n",
+    "    CONTROL_ADMISSIONS_MERGED[\"ADMITTIME\"] = pd.to_datetime(\n",
+    "        CONTROL_ADMISSIONS_MERGED[\"ADMITTIME\"], errors=\"coerce\"\n",
+    "    )\n",
+    "\n",
+    "    DISEASE_ADMISSIONS = PATIENT_ADMISSIONS_MERGED[\n",
+    "        PATIENT_ADMISSIONS_MERGED[\"HADM_ID\"].isin(AD_HADM_ID)\n",
+    "    ].copy()\n",
+    "\n",
+    "    DISEASE_ADMISSIONS = DISEASE_ADMISSIONS.sort_values(\n",
+    "        [\"SUBJECT_ID\", \"ADMITTIME\"]\n",
+    "    )\n",
+    "\n",
+    "    DISEASE_FIRST_ADMISSIONS = (\n",
+    "        DISEASE_ADMISSIONS\n",
+    "        .groupby(\"SUBJECT_ID\", as_index=False)[\"ADMITTIME\"]\n",
+    "        .min()\n",
+    "        .rename(columns={\"ADMITTIME\": \"Comparator\"})\n",
+    "    )\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.merge(\n",
+    "        DISEASE_FIRST_ADMISSIONS,\n",
+    "        on=\"SUBJECT_ID\",\n",
+    "        how=\"left\"\n",
+    "    )\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED[\n",
+    "        (PATIENT_ADMISSIONS_MERGED[\"Comparator\"].isna()) |\n",
+    "        (PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"] <= PATIENT_ADMISSIONS_MERGED[\"Comparator\"])\n",
+    "    ]\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.drop(columns=[\"Comparator\"])\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.set_index(\"ADMISSION_INDEX\")\n",
+    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.sort_index()\n",
+    "\n",
+    "    return PATIENT_ADMISSIONS_MERGED, CONTROL_ADMISSIONS_MERGED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "944292af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATIENT_ADMISSIONS_MERGED, CONTROL_ADMISSIONS_MERGED = apply_event_index_filter(PATIENT_ADMISSIONS_MERGED, CONTROL_ADMISSIONS_MERGED, AD_HADM_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "373a8875-2261-4d82-84ac-923810f87831",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<StringArray>\n",
+      "['44101',  '5185', '99674', '56962',  '9971', '42731', '99859', '70703',\n",
+      "  '5793',  '2874',\n",
+      " ...\n",
+      " 'V8542', '45184', 'V2652',  '2409',  '1124',  '7801', '43401', '78009',\n",
+      " '44029', '34989']\n",
+      "Length: 844, dtype: str\n",
+      "<StringArray>\n",
+      "['25013',  '3371',  '5849',  '5780', 'V5867', '25063',  '5363',  '4580',\n",
+      " '25043', '40390',\n",
+      " ...\n",
+      " '82534', 'V6889', 'E9238', '74921',  '9063', '72672', '37882', '38832',\n",
+      " '40400', '44382']\n",
+      "Length: 6973, dtype: str\n",
+      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
+      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
+      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
+      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
+      "      dtype='str')\n",
+      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
+      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
+      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
+      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
+      "      dtype='str')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nThomas's Note Retained Below:\\n\\nWe need to add another Column having a hospital amdission ID value for each event further back from the event.\\n\\nNOTE that we need to label the most recent event as 0 and count backwards in order to have all patients match.\\n\\nNeed to search in the literature what to do with repeated lab values. For example, if a patient across multiple admissions has their SpO2 value taken 6 times, what do we do with those values? For example, take average? Take most recent? Not sure\\n\\nSearch lab events that are important for the diagnoses and use those.\\n\\nAlso need to randomly sample from the non patient cohort rather than take them all.\\n\\n\""
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#display unique ICD9 codes in the filtered patient admissions\n",
     "print(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())\n",
     "print(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())\n",
     "\n",
-    "for i in range(len(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())):\n",
-    "    print(str(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique()[i]) + \",\")\n",
+    "print(PATIENT_ADMISSIONS_MERGED.columns)\n",
+    "print(CONTROL_ADMISSIONS_MERGED.columns)\n",
     "\n",
-    "for i in range(len(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())):\n",
-    "    print(str(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique()[i]) + \",\")\n",
+    "#for i in range(len(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())):\n",
+    "#    print(str(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique()[i]) + \",\")\n",
+    "\n",
+    "#for i in range(len(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())):\n",
+    "#    print(str(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique()[i]) + \",\")\n",
     "\n",
     "'''\n",
     "Thomas's Note Retained Below:\n",
@@ -316,11 +417,21 @@
     "\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "34686fff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATIENT_ADMISSIONS_MERGED.to_csv(r\"C:\\Users\\kappl\\Documents\\BIOE5860\\PATIENT_ADMISSIONS_MERGED.csv\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -334,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
